--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
     "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/typography": "^0.5.19",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -27,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
